--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,12 @@
-INCLUDE(include)
+ADD_SUBDIRECTORY(include)
 
 INCLUDE_DIRECTORIES(
     ${LIBFBI_SOURCE_DIR}/include
     ${LIBFBI_BINARY_DIR}/include
-    ${LIBFBI_BINARY_DIR}/examples/include/ssrc/spatial
+    ${LIBFBI_SOURCE_DIR}/examples/include
+    ${LIBFBI_BINARY_DIR}/examples/include
+    ${LIBFBI_SOURCE_DIR}/examples/include/spatial
+    ${LIBFBI_BINARY_DIR}/examples/include/spatial
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${BOOST_INCLUDE_DIRS}
 )
@@ -13,6 +16,7 @@ LINK_DIRECTORIES(
 )
 
 ADD_EXECUTABLE(example-xic-construction example-xic-construction.cpp)
+ADD_EXECUTABLE(kdtree-xic-construction kdtree-xic-construction.cpp)
 ADD_EXECUTABLE(example-isotope-patterns example-isotope-patterns.cpp)
 ADD_EXECUTABLE(example-ms2-ms1-matching example-ms2-ms1-matching.cpp)
 ADD_EXECUTABLE(simple-example simple-example.cpp)
@@ -24,6 +28,11 @@ TARGET_LINK_LIBRARIES(example-ms2-ms1-matching
 )
 
 TARGET_LINK_LIBRARIES(example-xic-construction
+    ${Boost_PROGRAM_OPTIONS_LIBRARY}
+    ${Boost_SYSTEM_LIBRARY}
+)
+
+TARGET_LINK_LIBRARIES(kdtree-xic-construction
     ${Boost_PROGRAM_OPTIONS_LIBRARY}
     ${Boost_SYSTEM_LIBRARY}
 )
