better compiler checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,9 @@ TRY_COMPILE (HAS_TEMPLATE_ALIASES
     ${CMAKE_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/testtemplatealias.cxx
 )
-TRY_COMPILE (HAS_ARRAY
+TRY_COMPILE (HAS_KDTREE
     ${CMAKE_BINARY_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/testarray.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/kdtree.cxx
 )
 
 CONFIGURE_FILE(
