--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ TRY_COMPILE (HAS_TEMPLATE_ALIASES
 )
 TRY_COMPILE (HAS_KDTREE
     ${CMAKE_BINARY_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/kdtree.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/testkdtree.cxx
 )
 
 CONFIGURE_FILE(
