--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,9 +82,13 @@ MACRO_COPY_FILES(${CPYSRC} ${CPYDST})
 
 IF (ENABLE_BENCHMARK OR ENABLE_EXAMPLES)
 # require boost
-  SET(Boost_USE_STATIC_LIBS OFF)
-  SET(Boost_USE_MULTITHREAD OFF)
-  FIND_PACKAGE(Boost COMPONENTS program_options system REQUIRED)
+IF (WIN32)
+  OPTION(Boost_USE_STATIC_LIBS "Use Boost Static Libs" ON)
+ELSE (WIN32)
+  OPTION(Boost_USE_STATIC_LIBS "Use Boost Static Libs" OFF)
+ENDIF(WIN32)
+
+FIND_PACKAGE(Boost COMPONENTS program_options system date_time REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ENDIF (ENABLE_BENCHMARK OR ENABLE_EXAMPLES)
