--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,13 @@ SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}")
 MACRO_REQUIRE_OUT_OF_SRC_BUILD("LIBFBI requires out-of-source builds.")
 
 # more warnings against everything
-IF(CMAKE_COMPILER_IS_GNUCXX OR CLANG)
+IF(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANG)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wconversion -Wall -Wextra -Wno-unused-parameter" )
 OPTION(USE_C++1X "Enable C++1x compilation (requires a compliant compiler)" ON)
 IF (USE_C++1X)
 SET(CMAKE_CXX0X_FLAGS "-std=c++0x" )
 ENDIF (USE_C++1X)
-ENDIF(CMAKE_COMPILER_IS_GNUCXX OR CLANG)
+ENDIF(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANG)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX0X_FLAGS}" )
 
 IF (NOT CMAKE_BUILD_TYPE)
