boost iostreams, for better windows speed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ ELSE (WIN32)
   OPTION(Boost_USE_STATIC_LIBS "Use Boost Static Libs" OFF)
 ENDIF(WIN32)
 
-FIND_PACKAGE(Boost COMPONENTS program_options system date_time REQUIRED)
+FIND_PACKAGE(Boost COMPONENTS program_options system date_time iostreams REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ENDIF (ENABLE_BENCHMARK OR ENABLE_EXAMPLES)
