Added version info to CMake config script
Signed-off-by: Marc Kirchner <mail@marc-kirchner.de>

--- a/LIBFBIConfig.cmake.in
+++ b/LIBFBIConfig.cmake.in
@@ -14,3 +14,7 @@ set (LIBFBI_USE_FILE @CMAKE_INSTALL_PREFIX@/share/libfbi/cmake/LIBFBIUse.cmake)
 
 set (LIBFBI_REQUIRED_CXX_FLAGS "-std=c++0x")
 
+set (LIBFBI_VERSION_MAJOR @VERSION_MAJOR@)
+
+set (LIBFBI_VERSION_MINOR @VERSION_MINOR@)
+
