added multithreading for variadic and boost

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,9 @@ TRY_COMPILE (HAS_TEMPLATE_ALIASES
     ${CMAKE_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/testtemplatealias.cxx
 )
+
+OPTION(ENABLE_MULTITHREADING "Use Multithreading in LIBFBI" OFF)
+
 TRY_COMPILE (HAS_KDTREE
     ${CMAKE_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/testkdtree.cxx
@@ -67,11 +70,17 @@ IF (HAS_VARIADIC_TEMPLATES)
   set(CPYSRC "${CMAKE_CURRENT_SOURCE_DIR}/include/fbi/variadic/")
 ELSE (HAS_VARIADIC_TEMPLATES)
   set(CPYSRC "${CMAKE_CURRENT_SOURCE_DIR}/include/fbi/boost/")
-
+#require boost headers
+  FIND_PACKAGE(Boost REQUIRED)
+IF (ENABLE_MULTITHREADING)
+  FIND_PACKAGE(Boost COMPONENTS thread REQUIRED)
+  MESSAGE("\n Don't forget to link against Boost_THREAD_LIBRARY \n")
+ENDIF (ENABLE_MULTITHREADING)
 ENDIF (HAS_VARIADIC_TEMPLATES)
 
   set(CPYDST "${CMAKE_CURRENT_BINARY_DIR}/include/fbi/")
 MACRO_COPY_FILES(${CPYSRC} ${CPYDST})
+
 
 
 # add subdirs
