--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,6 +49,9 @@ IF (HAS_VARIADIC_TEMPLATES)
 SET(SRCS_FBI fbi-test_v.cpp)
 ELSE (HAS_VARIADIC_TEMPLATES)
 SET(SRCS_FBI fbi-test_b.cpp)
+IF (ENABLE_MULTITHREADING)
+link_libraries(${Boost_THREAD_LIBRARY})
+ENDIF (ENABLE_MULTITHREADING)
 ENDIF (HAS_VARIADIC_TEMPLATES)
 
 #### Tests
